fix: video height too small

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,14 @@
-.spotlight .image iframe {
-    width: 100% !important;
-    height: auto !important;
+.video-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    position: relative;
+    height: 0;
+}
+
+.video-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
 }
